compiler/e2e/test/snapshot/ir/expression/do/arguments_count_mismatched/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: the effect operation `mismatched` expects 1 argument , but the handler has 2 arguments
   ╭─ compiler/e2e/test/snapshot/ir/expression/do/arguments_count_mismatched/main.pnx:14:9
   │
14 │         mismatched(one, two): # arguments count mismatched
   │         ^^^^^^^^^^ handler for operation `mismatched` of effect
   │
   = consider changing the number of arguments in the handler to be 1

error: Compilation aborted due to 1 error(s)



stdout:
